--- a/setup.Rmd
+++ b/setup.Rmd
@@ -51,17 +51,29 @@ respdat=log(respdat)
      1:3,1:3,1:3,
      4:6,4:6,4:6,
      10:12,10:12,10:12,
-     7:12,7:12,7:12,
-     1:3,1:3,1:3,
+     1:9,1:9,1:9,
+     1:12,1:12,1:12,
      7:9,7:9,7:9,
      4:5,6:7)
-  
+
+#fix problem in seio_covariates_mon with SST in 1994.
+  #replace with 5 year mean for that month
+  seio_covariates_mon2 = seio_covariates_mon
+  tmpcov=c("SST.UPW.3","SST.UPW.4","SST.UPW.5","SST.3","SST.4","SST.5")
+  for(itmpcov in tmpcov){
+    for(mon in 10:12){
+    filt1=with(seio_covariates_mon2, Year==1994 & Month==mon)
+    filt2=with(seio_covariates_mon2, Year%in%(1990:1996) & Month==mon)
+    seio_covariates_mon2[filt1,itmpcov]=mean(seio_covariates_mon[filt2,itmpcov], na.rm=TRUE)
+    }
+  }
+     
 n=2 #max lag in cov to use
 for(i in 1:length(covnames)){
   covname=covnames[i]
   mon=covmon[[i]]
   varname=paste(covname,".mon",mon[1],"to",mon[length(mon)],".0",sep="")
-  covdat=tapply(seio_covariates_mon[[covname]],seio_covariates_mon$Year,function(x){mean(x[mon],na.rm=TRUE)})
+  covdat=tapply(seio_covariates_mon2[[covname]],seio_covariates_mon2$Year,function(x){mean(x[mon],na.rm=TRUE)})
   if(str_detect(varname, "mon1to3")|str_detect(varname, "mon4to6")){
     respdat[[varname]]=c(covdat[-1],NA)
   }else{
@@ -69,6 +81,7 @@ for(i in 1:length(covnames)){
   }
 
 }
+
 #add lags
 for(i in colnames(respdat)){
   name=paste(str_sub(i, 1, str_length(i)-1),"1",sep="")
@@ -79,4 +92,25 @@ for(i in colnames(respdat)){
 respdat$Year=oilsardine_qtr$Year[oilsardine_qtr$Qtr==Qtr]
 
 fullrespdat = respdat
+```
+
+```{r message=FALSE,warning=FALSE, echo=FALSE}
+covnames = c("precip.gpcp.kerala.mon6to7.", "precip.gpcp.kerala.mon4to5.", "SST.4.mon1to12.", "SST.4.mon1to9.", "SST.4.mon7to9.", "SST.UPW.4.mon1to3.", "SST.UPW.4.mon7to9.", "SST.UPW.4.mon10to12.", "SST.UPW.4.mon4to6.")
+#set up to use consistent data
+dat=fullrespdat[,c("Year","spawners0", "nspawners1", paste(covnames, "0", sep=""), paste(covnames, "1", sep=""))]
+dat=na.omit(dat)
+dat.spawners=dat
+if(any(diff(dat.spawners$Year)!=1)) stop("Problem in setup.Rmd.  The covariate data.frame cannot have any missing years.")
+```
+
+
+```{r message=FALSE,warning=FALSE, echo=FALSE}
+covnames = c("precip.gpcp.kerala.mon6to7.", "precip.gpcp.kerala.mon4to5.", "SST.4.mon1to12.", "SST.4.mon1to9.", "SST.4.mon7to9.", "SST.UPW.4.mon1to3.", "SST.UPW.4.mon7to9.", "SST.UPW.4.mon10to12.")
+#set up to use consistent data
+dat=fullrespdat[,c("Year","nspawners0", "nspawners1", "spawners2", paste(covnames, "0", sep=""), paste(covnames, "1", sep=""))]
+dat=na.omit(dat)
+dat.nonspawners=dat
+if(any(diff(dat.nonspawners$Year)!=1))
+  stop("Problem in setup.Rmd.  The covariate data.frame cannot have any missing years.")
+rm(dat) #make sure I don't accidentally forget to define dat
 ```
