added legend for cov effect figure

--- a/OilSardine_NOAA_MoES.Rmd
+++ b/OilSardine_NOAA_MoES.Rmd
@@ -162,7 +162,7 @@ Figure `r ref("fig:CHLts")`.  Monthly surface chlorophyll-a (Chl-a) 1997-2017 of
 
 Figure `r ref("fig:SSTts")`.  Monthly average sea surface temperature (SST) off the Kerala coast (box 4 only in Figure `r ref("fig:studyarea")`.  ).  Panel A) shows the monthly average SST from 2000 to 2005.  Panel B) shows the monthly average SST over all available years 1981-2015.
 
-Figure `r ref("fig:SSTeffect")`.  Non-linear effect of temperature on catch during the spawning season (3rd quarter). [*missing*]
+Figure `r ref("fig:cov-effects")`.  Effects of covariates estimated from the GAM models. Panel A) Effect of SST during the spawning months (Jul-Sep) on catch during the spawning months.  Low SST is associated with lower that expected catch during the spawning months.  Panel B) Effect of upwelling (inshore/off-shore SST differential) during Jan-Mar of the prior season on catch during the next spawning months (Jul-Sep).  The index is the difference between offshore and inshore SST, thus a negative value indicates warmer coastal surface water than off-shore.  Warm coastal water during Jan-Mar when sardines are foraging along the coast, is associated with lower catch during the next spawning season.  Panel C) Effect of SST during the spawning months (Jul-Sep) on catch during the subsequent non-spawning months (Oct-Jun).  Low SST is associated with lower that expected catch during the following non-spawning months.  Panel D) Effect of upwelling (inshore/off-shore SST differential) during Oct-Dec of the prior season on catch during the non-spawning months (Oct-Jun) the next season.  Strong upwelling (positive upwelling index) in the early larval and juvenile period (Oct-Dec) is associated with higher than expected catch in the next season.
 
 Figure `r ref("fig:fittedmodel")`.  Fitted versus observed catch in the spawning period from the best covariate model.  [*missing*]
 
