--- a/Appendices.Rmd
+++ b/Appendices.Rmd
@@ -53,9 +53,18 @@ cat("\\clearpage")
 cat("\\clearpage")
 ```
 
-# Appendix C: Correlation of covariates across the boxes
+# Appendix C: Tests for Chlorophyll-a as a covariate
 
-```{r cov-correlation, fig.cap="Correlation of the covariates across boxes.  Correlation is shown by the width of the lines between neighboring boxes.",fig.width=5.5,message=FALSE,warning=FALSE, echo=FALSE}
+```{r child = 'Table App C chlorophyll.Rmd'}
+```
+
+```{r, results="asis", echo=FALSE}
+cat("\\clearpage")
+```
+
+# Appendix D: Correlation of covariates across the boxes
+
+```{r cov-correlation, fig.cap="Figure C1. Correlation of the covariates across boxes.  Correlation is shown by the width of the lines between neighboring boxes.",fig.width=5.5,message=FALSE,warning=FALSE, echo=FALSE}
 library(maps)
 library(mapdata)
 par(mfrow=c(2,2),mar=c(0,1,1,1))
